test_suite5/ALAN/test_suite/alan-2022-examples/failing/003470_mutation.alan
source U11k begin if 0 then relax elsif 55 then + end end
